--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <meta httpEquiv="X-UA-Compatible" content="ie=edge" />
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="yes" name="mobile-web-app-capable" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Maths learning app for kids"
@@ -29,6 +28,47 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Math4Kids</title>
+    <style>
+      .spinner,
+      .spinner:after {
+        border-radius: 50%;
+        width: 10em;
+        height: 10em;
+      }
+      .spinner {
+        margin: calc(50% - 20em) auto;
+        position: relative;
+        border-top: 1.1em solid #7D4CDB;
+        border-right: 1.1em solid #7D4CDB;
+        border-bottom: 1.1em solid #7D4CDB;
+        border-left: 1.1em solid #ffffff;
+        -webkit-transform: translateZ(0);
+        -ms-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-animation: load8 1.1s infinite linear;
+        animation: load8 1.1s infinite linear;
+      }
+      @-webkit-keyframes load8 {
+        0% {
+          -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+        }
+        100% {
+          -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+      @keyframes load8 {
+        0% {
+          -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+        }
+        100% {
+          -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
