add theme color

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta httpEquiv="X-UA-Compatible" content="ie=edge" />
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="yes" name="mobile-web-app-capable" />
+    <meta name="theme-color" content="#7D4CDB" />
     <meta
       name="description"
       content="Maths learning app for kids"
