more visual tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         height: 10em;
       }
       .spinner {
-        margin: calc(50% - 20em) auto;
+        margin: 50% auto;
         position: relative;
         border-top: 1.1em solid #7D4CDB;
         border-right: 1.1em solid #7D4CDB;
