update manifest and add overflow fix

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     -->
     <title>Math4Kids</title>
     <style>
+      #root {
+        overflow: hidden;
+      }
       .spinner,
       .spinner:after {
         border-radius: 50%;
@@ -46,10 +49,10 @@
         -webkit-transform: translateZ(0);
         -ms-transform: translateZ(0);
         transform: translateZ(0);
-        -webkit-animation: load8 1.1s infinite linear;
-        animation: load8 1.1s infinite linear;
+        -webkit-animation: spin 1.1s infinite linear;
+        animation: spin 1.1s infinite linear;
       }
-      @-webkit-keyframes load8 {
+      @-webkit-keyframes spin {
         0% {
           -webkit-transform: rotate(0deg);
           transform: rotate(0deg);
@@ -59,7 +62,7 @@
           transform: rotate(360deg);
         }
       }
-      @keyframes load8 {
+      @keyframes spin {
         0% {
           -webkit-transform: rotate(0deg);
           transform: rotate(0deg);
