add 3 more languages support, fix overflow

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>Math4Kids</title>
     <style>
-      #root {
+      #root > div:first-of-type{
         overflow: hidden;
       }
       .spinner,
